fixed alignment issue on the homescreen

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ body {
 .my-card {
   width: 40%;
   overflow: hidden;
+  align-items: center;
 }
 .card-cont {
   display: flex;
